--- a/src/components/Face-Recognition/FaceRecognition.module.css
+++ b/src/components/Face-Recognition/FaceRecognition.module.css
@@ -1,5 +1,5 @@
 .bounding {
-    position:sticky;
+    position:relative;
     box-shadow: 0 0 0 3px #149df2 inset;
     display: flex;
     flex-wrap: wrap;
